@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+ <stylesheet
+    id="++resource++tinymce.stylesheets/tinymce.css"
+    remove="True"/>
+
+</object>
